	  ZONEMD records are checked for zones loaded as auth-zone,
	  with DNSSEC if available.  There is an added option
	  zonemd-permissive-mode that makes it log but not fail wrong zones.
	  With zonemd-reject-absence for an auth-zone the presence of a
	  zonemd can be mandated for specific zones.
	- Fix doxygen and pydoc warnings.
	- Fix #429: rpz: url: with https: broken (regression in 1.13.1).

15 February 2021: Wouter
	- Fix #422: IPv6 fallback issues when IPv6 is not properly
	  enabled/configured.
	- Fix to make tests work with support indicators set for iterator.
	- Fix build on Python 3.10.

10 February 2021: Wouter
	- Merge PR #420 from dyunwei: DOH not responsing with
	  "http2_query_read_done failure" logged.

9 February 2021: Wouter
	- Fix for Python 3.9, no longer use deprecated functions of
	  PyEval_CallObject (now PyObject_Call), PyEval_InitThreads (now
	  none), PyParser_SimpleParseFile (now Py_CompileString).

4 February 2021: Wouter
	- release 1.13.1rc2 tag on branch-1.13.1 with added changes of 2 feb.
	  This became 1.13.1 release tag on 9 feb.  The main branch is set
	  to version 1.13.2.

2 February 2021: Wouter
	- branch-1.13.1 is created, with release-1.13.1rc1 tag.
	- Fix dynlibmod link on rhel8 for -ldl inclusion.
	- Fix windows dependency on libssp.dll because of default stack
	  protector in mingw.
	- Fix indentation of root anchor for use by windows install script.

1 February 2021: George
	- Attempt to fix NULL keys in the reuse_tcp tree; relates to #411.

29 January 2021: Wouter
	- Fix for doxygen 1.8.20 compatibility.

28 January 2021: Wouter
	- Annotate that we ignore the return value of if_indextoname.
	- Fix to use correct type for label count in rpz routine.
	- Fix empty clause warning in config_file nsid parse.
	- Fix to use correct type for label count in ipdnametoaddr rpz routine.
	- Fix empty clause warning in edns pass for padding.
	- Fix fwd ancil test post script when not supported.

26 January 2021: George