@@ -7,6 +7,7 @@
 	  zonemd can be mandated for specific zones.
 	- Fix doxygen and pydoc warnings.
 	- Fix #429: rpz: url: with https: broken (regression in 1.13.1).
+	- rpz skip nsec3param records, and nicer log for unsupported actions.
 
 15 February 2021: Wouter
 	- Fix #422: IPv6 fallback issues when IPv6 is not properly
